--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1062,7 +1062,7 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Level",
+ 	 	 	 	 	"trans": "Eben",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
@@ -1318,12 +1318,6 @@
  	 	 	"notUnlocked": {
  	 	 	 	"trans": "Du hast diesen Bereich noch nicht freigeschaltet",
  	 	 	 	"eng": "You have not unlocked this area yet"
- 	 	 	}
- 	 	},
- 	 	"tutorial": {
- 	 	 	"title": {
- 	 	 	 	"trans": "Lernprogramm",
- 	 	 	 	"eng": "Tutorial"
  	 	 	}
  	 	},
  	 	"machineCrafting": {
@@ -3576,7 +3570,7 @@
  	},
  	"slider": {
  	 	"min": {
- 	 	 	"trans": "Min",
+ 	 	 	"trans": "Mindest",
  	 	 	"eng": "Min"
  	 	},
  	 	"max": {
@@ -3687,13 +3681,25 @@
  	 	 	}
  	 	},
  	 	"error": {
+ 	 	 	"tradeNoLongerExist": {
+ 	 	 	 	"trans": "Diese Handelssitzung existierte nicht mehr",
+ 	 	 	 	"eng": "this trade session no longer existed"
+ 	 	 	},
+ 	 	 	"cantStartTradeNotIdle": {
+ 	 	 	 	"trans": "Sie können keinen Handel beginnen, wenn Sie nicht untätig sind",
+ 	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"targetPlayerBlockedYou": {
+ 	 	 	 	"trans": "Sie können keine Handelsladung an diesen Spieler senden",
+ 	 	 	 	"eng": "You cannot send trade invite to this player"
+ 	 	 	},
  	 	 	"targetPlayerBlockedGifts": {
  	 	 	 	"trans": "Zielspieler hat Geschenke und Handel deaktiviert",
  	 	 	 	"eng": "Target player has disabled gift and trade"
  	 	 	},
  	 	 	"targetPlayerLimited": {
  	 	 	 	"trans": "Zielspieler kann nicht am Handel teilnehmen",
- 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	 	"eng": "You cannot send trade invite to this player"
  	 	 	},
  	 	 	"tooFrequentlyInvite": {
  	 	 	 	"vars": [
@@ -3701,6 +3707,13 @@
  	 	 	 	],
  	 	 	 	"trans": "Sie können nicht so häufig einladen, die Einladeabklingzeit beträgt ${minutes} Minuten",
  	 	 	 	"eng": "You cannot invite too frequently, trade invite cooldown is ${minutes} minutes"
+ 	 	 	},
+ 	 	 	"maxItemsPerPlayer": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"maxItems"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sie können nicht mehr als ${maxItems} Artikel pro Spieler hinzufügen",
+ 	 	 	 	"eng": "You cannot add more than ${maxItems} items per player"
  	 	 	},
  	 	 	"notEnoughItems": {
  	 	 	 	"vars": [
@@ -3759,6 +3772,24 @@
  	 	 	 	"eng": "${playerName} doesn't have enough money to complete the trade."
  	 	 	}
  	 	},
+ 	 	"success": {
+ 	 	 	"receivedItem": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"playerName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sie haben ${itemName} von ${playerName} erhalten",
+ 	 	 	 	"eng": "You received ${itemName} from ${playerName}"
+ 	 	 	},
+ 	 	 	"sentItem": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"playerName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sie haben ${itemName} an ${playerName} gesendet",
+ 	 	 	 	"eng": "You sent ${itemName} to ${playerName}"
+ 	 	 	}
+ 	 	},
  	 	"moneyReceived": {
  	 	 	"vars": [
  	 	 	 	"money",
@@ -3767,9 +3798,13 @@
  	 	 	"trans": "Sie haben ${money} BTC von ${playerName} erhalten",
  	 	 	"eng": "You received ${money} BTC from ${playerName}"
  	 	},
- 	 	"completed": {
- 	 	 	"trans": "Handel abgeschlossen",
- 	 	 	"eng": "Trade completed"
+ 	 	"moneySent": {
+ 	 	 	"vars": [
+ 	 	 	 	"money",
+ 	 	 	 	"playerName"
+ 	 	 	],
+ 	 	 	"trans": "Sie haben ${money} BTC an ${playerName} gesendet",
+ 	 	 	"eng": "You sent ${money} BTC to ${playerName}"
  	 	}
  	},
  	"tutorial": {
@@ -4021,7 +4056,7 @@
  	 	 	"eng": "CyberKitty"
  	 	},
  	 	"donation12": {
- 	 	 	"trans": "CyberSanta",
+ 	 	 	"trans": "Cyberanta",
  	 	 	"eng": "CyberSanta"
  	 	},
  	 	"donation13": {
